# aidemo

ai-pipeline/: .env.example  .env.thirdparty.example  .gitignore  CHECKLIST.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  THIRDPARTY_API_GUIDE.md  demo.py  requirements.txt  run.py  run_pipeline.py  setup.bat  setup.sh
ai-pipeline/.github/workflows/: ai-pipeline.yml
ai-pipeline/example_app/: __init__.py  pyproject.toml
ai-pipeline/example_app/src/: __init__.py  app.py
ai-pipeline/example_app/tests/: __init__.py  test_app.py
ai-pipeline/orchestrator/: llm_client.py  llm_client_backup.py  llm_client_v2.py  orchestrator.py  utils.py
ai-pipeline/orchestrator/prompts/: claude_code_prompt.txt  codex_review_prompt.txt  codex_srs_prompt.txt
