[project]
name = "example-app"
version = "1.0.0"
description = "示例 Flask 微服务"
authors = [{name = "AI Pipeline Team"}]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "black>=23.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 127
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]
